# PAC-man

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ai_play.py  bc_pretrain.py  env_pac.py  pacman_policy.onnx  pacman_policy.onnx.data  requirements.txt  train_ppo.py
include/: AIAgent.h  AStar.h  Common.h  Game.h  Ghost.h  Maze.h  Player.h  Renderer.h
levels/: level2.txt  level4.txt  level5.txt  level6.txt  level9.txt
logs/: imitation_20260406_232800.jsonl
src/: AStar.cpp  Game.cpp  Ghost.cpp  Maze.cpp  Player.cpp  Renderer.cpp  main.cpp
